# rearrange_task

./: .gitignore  CMakeLists.txt  config.txt  file_hash.h  main.cpp  rearrange.h  rearrge
test/: generate  generate.cpp  statis.txt  test.dat.musk  test.dat.rearg  verify  verify.cpp
